--- a/web/app/index.html
+++ b/web/app/index.html
@@ -15,6 +15,7 @@
         <!-- app css files s -->
         <link rel="stylesheet" href="src/css/main.css">
         <!-- common -->
+        <link rel="stylesheet" href="src/css/mod/common/header.css">
         <link rel="stylesheet" href="src/css/mod/common/layout.css">
         <link rel="stylesheet" href="src/css/mod/common/sideNav.css">
         <link rel="stylesheet" href="src/css/mod/common/pagination.css">
@@ -53,10 +54,12 @@
         <script src="src/js/plugin/datetimepicker/locales/bootstrap-datetimepicker.zh-CN.js"></script>
         <script src="src/js/plugin/malihu-custom-scrollbar/jquery.mCustomScrollbar.concat.min.js"></script>
         <script src="src/js/plugin/autocomplete/jquery.autocomplete.js"></script>
+        <script src="src/js/plugin/md5/index.js"></script>
 		<!-- app js files s-->
         <script src="src/js/app.js"></script>
         <!-- public -->
         <script src="src/js/services/ajaxInfo.js"></script>
+        <script src="src/js/services/pageService.js"></script>
         <script src="src/js/services/validate.js"></script>
         <script src="src/js/controllers/pub/header.js"></script>
         <script src="src/js/controllers/pub/sideNav.js"></script>
