--- a/web/app/index.html
+++ b/web/app/index.html
@@ -60,6 +60,7 @@
         <!-- public -->
         <script src="src/js/services/ajaxInfo.js"></script>
         <script src="src/js/services/pageService.js"></script>
+        <script src="src/js/services/clientStore.js"></script>
         <script src="src/js/services/validate.js"></script>
         <script src="src/js/controllers/pub/header.js"></script>
         <script src="src/js/controllers/pub/sideNav.js"></script>
