--- a/web/app/index.html
+++ b/web/app/index.html
@@ -50,7 +50,7 @@
         <script src="src/js/lib/angular/angular-sanitize/angular-sanitize.js"></script>
         <script src="src/js/lib/angular/angular-touch/angular-touch.js"></script>
         <script src="src/js/plugin/underscore/underscore.1.8.3.min.js"></script>
-        <script src="src/js/plugin/datetimepicker/bootstrap-datetimepicker.js"></script>
+        <script src="src/js/plugin/datetimepicker/bootstrap-datetimepicker.min.js"></script>
         <script src="src/js/plugin/datetimepicker/locales/bootstrap-datetimepicker.zh-CN.js"></script>
         <script src="src/js/plugin/malihu-custom-scrollbar/jquery.mCustomScrollbar.concat.min.js"></script>
         <script src="src/js/plugin/autocomplete/jquery.autocomplete.js"></script>
@@ -64,6 +64,7 @@
         <script src="src/js/services/validate.js"></script>
         <script src="src/js/controllers/pub/header.js"></script>
         <script src="src/js/controllers/pub/sideNav.js"></script>
+        <script src="src/js/directives/errorAlert.js"></script>
         <!-- login -->
         <script src="src/js/controllers/login/index.js"></script>
         <!-- setting -->
