--- a/web/app/index.html
+++ b/web/app/index.html
@@ -9,9 +9,10 @@
         <base target="_self">
         <meta name="description" content="">
         <!-- lib css files -->
-        <link rel="stylesheet" href="src/css/lib/bootstrap_3.3.6.min.css">
-        <link rel="stylesheet" href="src/js/plugin/datetimepicker/bootstrap-datetimepicker.min.css">
+        <link rel="stylesheet" href="src/css/lib/bootstrap_3.3.6.min.css" />
+        <link rel="stylesheet" href="src/js/plugin/datetimepicker/bootstrap-datetimepicker.min.css" />
         <link rel="stylesheet" href="src/js/plugin/malihu-custom-scrollbar/jquery.mCustomScrollbar.css" />
+        <link rel="stylesheet" href="src/js/plugin/jeDate/jedate.css" />
         <!-- app css files s -->
         <link rel="stylesheet" href="src/css/main.css">
         <!-- common -->
@@ -54,6 +55,7 @@
         <script src="src/js/plugin/datetimepicker/locales/bootstrap-datetimepicker.zh-CN.js"></script>
         <script src="src/js/plugin/malihu-custom-scrollbar/jquery.mCustomScrollbar.concat.min.js"></script>
         <script src="src/js/plugin/autocomplete/jquery.autocomplete.js"></script>
+        <script src="src/js/plugin/jeDate/jquery.jedate.min.js"></script>
         <script src="src/js/plugin/md5/index.js"></script>
 		<!-- app js files s-->
         <script src="src/js/app.js"></script>
